# library_management

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.template  logging.conf  pyproject.toml  pytest.ini
alembic/: env.py
app/: admin_app.py  main.py  user_app.py
app/admin_site/api/: __init__.py  cache_management.py  deps.py  router.py
app/admin_site/models/: __init__.py  achievement.py  admin.py  admin_role.py  admin_session.py  badge.py  content_approval.py  featured_content.py  permission.py  promotion.py  report.py  role.py  role_permission.py  system_health.py  system_metric.py  system_setting.py
app/admin_site/repositories/: achievement_repo.py  admin_repo.py  admin_session_repo.py  analytics_repo.py  badge_repo.py  content_approval_repo.py  featured_content_repo.py  permission_repo.py  promotion_repo.py  report_repo.py  role_repo.py  system_health_repo.py  system_metric_repo.py  system_setting_repo.py
app/admin_site/schemas/: __init__.py  achievement.py  admin.py  admin_session.py  analytics.py  auth.py  badge.py  content_approval.py  featured_content.py  permission.py  promotion.py  recommendation.py  report.py  role.py  system_health.py  system_metric.py  system_setting.py
app/admin_site/services/: __init__.py  achievement_service.py  admin_service.py  admin_session_service.py  analytics_service.py  annotation_service.py  auth_service.py  author_service.py  badge_service.py  book_list_service.py  book_series_service.py  book_service.py  bookmark_service.py  bookshelf_service.py  cache_manager_service.py  category_service.py  chapter_service.py  content_approval_service.py  dashboard_service.py  discussion_service.py  featured_content_service.py  following_service.py  notification_service.py  payment_method_service.py  payment_service.py  permission_service.py  preference_service.py  promotion_service.py  publisher_service.py  quote_like_service.py  quote_service.py  reading_goal_service.py  reading_history_service.py  reading_session_service.py  recommendation_service.py  report_service.py  review_service.py  role_service.py  social_profile_service.py  subscription_service.py  (+5 more)
app/cache/: __init__.py  decorators.py  factory.py  keys.py  manager.py  middleware.py  serializers.py
app/cache/backends/: __init__.py  memory.py  multi_level.py  redis.py
app/cache/strategies/: __init__.py  event_based.py  query_based.py  time_based.py
app/common/: exceptions.py
app/common/cache/: __init__.py  redis_cache.py
app/common/db/: __init__.py  base_class.py  model.py  session.py
app/common/utils/: __init__.py  cache.py  date_utils.py  file_utils.py  pagination.py  slug.py  slugify.py  string_utils.py
app/core/: __init__.py  config.py  constants.py  db.py  db_events.py  errors.py  event.py  events.py  exceptions.py  model_mixins.py  models.py  security.py  swagger.py
app/logging/: __init__.py  config.py  filters.py  formatters.py  handlers.py  integration.py  setup.py
app/logs_manager/: README.md
app/middlewares/: __init__.py  auth_middleware.py  cache_middleware.py  cors_middleware.py  logging_middleware.py  rate_limit_middleware.py  security_middleware.py  tracing_middleware.py
app/monitoring/: __init__.py
app/performance/: __init__.py  performance.py
app/security/: __init__.py  auth.py  jwt.py  oauth2.py  password.py
app/tasks/: __init__.py  base_task.py  scheduler.py  worker.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/scripts/: create_tables.py  drop_tables.py  simple_seed.py  truncate_data.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_auth_extended.py  test_authors.py  test_books.py  test_categories.py  test_chapters.py  test_core.py  test_edge_cases.py  test_favorites.py  test_reading_lists.py  test_reading_progress.py  test_runner.py  test_search.py  test_services.py  test_upload.py  test_users.py
config/: __init__.py  development.py  production.py  settings.py  testing.py
config/scaling/: __init__.py  autoscaling.py
config/security/: __init__.py  compliance.py  cors.py  ip_whitelist.py  rate_limits.py
requirements/: base.txt  dev.txt  prod.txt  test.txt
tests/: conftest.py
(+351 files in other folders)
